<resources>
    <string name="app_name">Agenda</string>
    <string name="year">Ano</string>
    <string name="name">Nome</string>
    <string name="cancel">Cancelar</string>
    <string name="search">Search</string>
    <string name="phone">Telefone</string>
    <string name="address">Endereço</string>
    <string name="site">Site</string>
    <string name="site_not_found">Site não encontrado!</string>
    <string name="address_not_found">Endereço não encontrado!</string>
    <string name="number_not_found">Número não encontrado!</string>
    <string name="error_title">Erro</string>
    <string name="call">Ligar</string>
    <string name="send_sms">Enviar SMS</string>
    <string name="see_maps">Ver no Maps</string>
    <string name="go_to_site">Ir para Site</string>
    <string name="edit">Editar</string>
    <string name="delete">Excluir</string>
    <string name="options">Opções</string>
    <string name="confirmation">Confirmação</string>
    <string name="delete_confirm">Tem certeza que deseja excluir esse usuário?</string>
    <string name="confirm">Confirmar</string>
    <string name="update">Atualizar</string>
    <string name="add">Adicionar</string>
    <string name="birthday">Data de Nascimento</string>
    <string name="invalid_fields">Campos inválidos</string>
    <string name="insert_name">Insira o nome</string>
    <string name="insert_date">Insira a data</string>
    <string name="insert_phone">Insira o telefone</string>
    <string name="insert_address">Insira o endereço</string>
    <string name="insert_url">Insira a URL</string>
    <string name="score">Nota</string>
    <string name="insert_score">Insira a nota</string>
    <string name="upload_users">Upload de Usuários</string>
    <string name="download_tests">Download de Provas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subject">Matéria</string>
    <string name="date">Data</string>
    <string name="title_activity_maps">Map</string>
    <string name="maps">Maps</string>
</resources>
