<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"
        android:title="@string/search" />

    <item
        android:id="@+id/item_send"
        android:icon="@drawable/ic_cloud_upload_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/upload_users" />

    <item
        android:id="@+id/item_receive"
        android:icon="@drawable/ic_cloud_download_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/download_tests" />

    </menu>