<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="140dp"
                android:layout_height="150dp"
                android:src="@mipmap/ic_launcher_round"
                android:cropToPadding="true"
                android:clickable="false"
                android:id="@+id/image_photo"/>

            <android.support.design.widget.FloatingActionButton
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_alignBottom="@+id/image_photo"
                android:layout_alignEnd="@+id/image_photo"
                android:src="@drawable/ic_mode_edit_black_24dp"
                android:id="@+id/fab_edit_photo"
                app:backgroundTint="@color/colorPrimary"/>


        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name">

            <EditText
                android:id="@+id/name"
                android:inputType="text"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birthday">

            <EditText
                android:id="@+id/date"
                android:inputType="date"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone">

            <EditText
                android:id="@+id/phone"
                android:inputType="phone"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address">

            <EditText
                android:id="@+id/address"
                android:inputType="text"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/site">

            <EditText
                android:id="@+id/url"
                android:inputType="textUri"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:id="@+id/confirm_button"/>

    </LinearLayout>

</ScrollView>